manifests/podinfo/overlays/dev-istio-rollouts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    drozd.cloud/public-istio-gateway: enabled
    istio-injection: enabled
